--- a/presentation.ipynb
+++ b/presentation.ipynb
@@ -8,26 +8,7 @@
         "\n",
         "Réaliser un projet de data science de bout en bout à partir de données de cas d’usage réel. L’objectif sera alors d’appliquer un algorithme d’apprentissage automatique et/ou de réseau neuronal sur un ensemble de données réelles.\n",
         "\n",
-        "Data :\n",
-        "Vous avez 2 sujets donc 2 jeux de données à votre disposition. Vous devez choisir un ensemble de données parmi les 2.\n",
-        "\n",
-        "\n",
-        "## 1. `Supervision de lignes de bus`\n",
-        "\n",
-        "Les transports publics font face tous les jours à des flux de passagers différents. Dans le cadre de sa mission d’amélioration des services proposés à ses usagers, une société souhaite être en mesure (à terme) de :\n",
-        "- Anticiper les fortes affluences d’usagers sur l’ensemble de son réseau en ayant une vision claire des demandes pour chaque ligne et pour chaque arrêt.\n",
-        "- Optimiser les temps de trajets de sa flotte\n",
-        "\n",
-        "L’objet de ce challenge est donc de prédire l’affluence des passagers sur des lignes de bus, par jour, pour les 3 prochains jours.\n",
-        "\n",
-        "    - Vous aurez à disposition un historique du cumul journalier de voyageurs allant du 05 avril 2019 au 19 mars 2023, pour toutes les lignes de bus de la compagnie. \n",
-        "    - Le jeu de données est composé de 37 621 observations et 3 variables explicatives originales qui sont, la date, la ligne de bus et le type de ligne de bus (jour ou nuit). \n",
-        "    - La variable quantitative à prédire est le nombre de passagers/usagers.  \n",
-        "\n",
-        "    Variable de sortie : \n",
-        "    - Nombre de passagers (variable numérique continue) \n",
-        "\n",
-        "## 2. `Détection de fuite`\n",
+        "## `Détection de fuite`\n",
         "\n",
         "Pour un opérateur public de distribution d’eau, la détection rapide des fuites sur le réseau est un enjeu stratégique majeur. \n",
         "Les équipes terrain interviennent quotidiennement sur des milliers de kilomètres de canalisation, où les fuites peuvent passer inaperçues et entraîner des pertes  importantes d’eau, des coûts élevés et des  perturbations du service.\n",
@@ -1091,9 +1072,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Une fuite peut être considérée comme un changement de tendance à moyen terme (sur quelques semaines) qui n'est pas liée à une saisonnalité. Afin de les isoler, il convient donc d'éliminer des données les saisonnalités et les tendances de long terme (sur plusieurs mois).\n",
-        "\n",
-        "Le **seasonal decomposition of time series by Loess (STL)** offre la possibilité de décomposer un Signal (Season + Trend + Noise) pour une période de saisonnalité imposée (STL ne découvre pas la période : il l’impose). Avant d'utiliser cet outil, il est donc nécessaire de déterminer les saisonnalités du signal."
+        "Une fuite peut être considérée comme un changement de tendance à moyen terme (sur quelques semaines) qui n'est pas liée à une saisonnalité. Afin de les isoler, il convient donc d'éliminer des données les saisonnalités et les tendances de long terme (sur plusieurs mois)."
       ]
     },
     {
@@ -1588,7 +1567,7 @@
       "source": [
         "Pour la plupart des compteurs, la saisonnalité annuelle est plus marquée que la saisonnalité semestrielle. D'autre part, la saisonnalité semestrielle amplifie la saionnalité annuelle qui ressort renforcée.\n",
         "\n",
-        "**Conclusion** : L’analyse met en évidence une saisonnalité annuelle statistiquement significative pour 78% des compteurs étudiés. Parmi ces derniers, plus d’un tiers présentent également une composante saisonnière semestrielle, dont l’intensité demeure toutefois inférieure à celle de la saisonnalité annuelle. Aucune autre fréquence saisonnière n’apparaît de manière significative sur l’ensemble du jeu de données. En conséquence, l'utilisation de la STL est exclue pour les raisons citées précédemment et du fait de la présence d'une seconde composante saisonnière. La FFT va donc être utilisée pour déterminer le résiduel."
+        "**Conclusion** : L’analyse met en évidence une saisonnalité annuelle statistiquement significative pour 78% des compteurs étudiés. Parmi ces derniers, plus d’un tiers présentent également une composante saisonnière semestrielle, dont l’intensité demeure toutefois inférieure à celle de la saisonnalité annuelle. Aucune autre fréquence saisonnière n’apparaît de manière significative sur l’ensemble du jeu de données. En conséquence, l'utilisation de la STL est exclue car ne disposant pas de suffisamment de périodes et du fait de la présence d'une seconde composante saisonnière. La FFT va donc être utilisée pour déterminer le résiduel."
       ]
     },
     {
@@ -1874,33 +1853,6 @@
       "source": [
         "impression(data_with_fft, colonnes=['valeur_active'], libelles=fuites_principales)"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 183,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "30"
-            ]
-          },
-          "execution_count": 183,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "window3"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
