suppression partie Aziz

--- a/presentation.ipynb
+++ b/presentation.ipynb
@@ -680,7 +680,9 @@
         "\n",
         "L'observation montre aussi des fluctuations quotidiennes importantes et ce qu'il semble être une saisonnalité annuelle pour certains compteurs.\n",
         "\n",
-        "L'enjeux va dont être de nettoyer puis d'extraire des données les saisonnalités et la tendance pour ne conserver que le bruit résiduels et y identifier des anomalies en tant que fuite. "
+        "Enfin l'observation montre que les compteurs n'ont pas tous la même saisonnalité annuelle (position du pic dans l'année) ni la même tendance, et que les tendances ne sont pas stationnaires.\n",
+        "\n",
+        "L'enjeux va dont être de nettoyer puis d'extraire par série les saisonnalités et la tendance pour ne conserver que le bruit résiduels et y identifier des anomalies en tant que fuite. "
       ]
     },
     {
@@ -1109,15 +1111,7 @@
         "\n",
         "Le nombre de bins contrôle la résolution intra-période. c'est un compromis biais/variance :\n",
         "- peu de bins = profil très lissé\n",
-        "- beaucoup de bins = profil détaillé mais bruité\n",
-        "\n",
-        "Source :\n",
-        "- [STL](https://en.wikipedia.org/wiki/Decomposition_of_time_series)\n",
-        "- [FFT](https://fr.wikipedia.org/wiki/Transformation_de_Fourier_rapide)\n",
-        "- [puissance d'un signal](https://fr.wikipedia.org/wiki/%C3%89nergie_d%27un_signal)\n",
-        "- [saisonnalité](https://en.wikipedia.org/wiki/Seasonality)\n",
-        "- [puissance d'un signal](https://fr.wikipedia.org/wiki/%C3%89nergie_d%27un_signal)\n",
-        "- [SNR](https://fr.wikipedia.org/wiki/Rapport_signal_sur_bruit)"
+        "- beaucoup de bins = profil détaillé mais bruité"
       ]
     },
     {
@@ -1216,9 +1210,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Le calcul du SVR confirma la présence significative de saisonnalité annuelle sur une majorité de compteurs.\n",
-        "\n",
-        "Cela implique que le STL ne pourra pas être utilisé. En effet, il nécessite au moins 5 périodes et la dernière période n'est pas décomposée. Or dans notre cas, avec une période de 365 jours, les séries couvre seulement 3 périodes et nous avons besoin de déterminer la présence de fuite sur la dernière période précisément. "
+        "Le calcul du SVR confirma la présence significative de saisonnalité annuelle sur une majorité de compteurs."
       ]
     },
     {
@@ -1565,7 +1557,7 @@
       "source": [
         "Pour la plupart des compteurs, la saisonnalité annuelle est plus marquée que la saisonnalité semestrielle. D'autre part, la saisonnalité semestrielle amplifie la saionnalité annuelle qui ressort renforcée.\n",
         "\n",
-        "**Conclusion** : L’analyse met en évidence une saisonnalité annuelle statistiquement significative pour 78% des compteurs étudiés. Parmi ces derniers, plus d’un tiers présentent également une composante saisonnière semestrielle, dont l’intensité demeure toutefois inférieure à celle de la saisonnalité annuelle. Aucune autre fréquence saisonnière n’apparaît de manière significative sur l’ensemble du jeu de données. En conséquence, l'utilisation de la STL est exclue pour les raisons citées auparavant et du fait de la présence d'une seconde composante saisonnière."
+        "**Conclusion** : L’analyse met en évidence une saisonnalité annuelle statistiquement significative pour 78% des compteurs étudiés. Parmi ces derniers, plus d’un tiers présentent également une composante saisonnière semestrielle, dont l’intensité demeure toutefois inférieure à celle de la saisonnalité annuelle. Aucune autre fréquence saisonnière n’apparaît de manière significative sur l’ensemble du jeu de données."
       ]
     },
     {
@@ -1579,12 +1571,27 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "Pour une date de prédiction donnée, le modèle n’exploite exclusivement que les informations disponibles antérieurement à cette date, afin de reproduire un cadre d’utilisation réaliste dans lequel l’utilisateur interroge l’outil à l’instant présent pour la détection d’un événement de fuite en cours.\n",
+        "\n",
+        "L’historique de consommation associé à un compteur est alors partitionné en deux segments temporels distincts :\n",
+        "- Période d’évaluation : fenêtre temporelle la plus récente de l’historique, de durée paramétrable, s’achevant à la date de prédiction et sur laquelle une prédiction va être produite par le modèle. Cette période constitue le support principal du calcul des indicateurs utilisés pour la détection.\n",
+        "- Période de référence : ensemble des données historiques antérieures à la période d’évaluation, servant de référence au modèle pour la caractérisation du comportement nominal du compteur.\n",
+        "\n",
+        "Sur la période d’évaluation, un résiduel est calculé par la différence entre la consommation réelle et la consommation prédite par le modèle. Ce résiduel peut être positif ou négatif car il est une différence de consommation et non une consommation.\n",
+        "\n",
+        "Ce résiduel va être Qualifié (hausse, stabilité, baisse) et Quantifié (faible, moyen, fort) à l’aide de deux metrics (level_score et trend_score)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "## Décomposition Residuel"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 292,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1592,8 +1599,8 @@
         "    \"\"\"\n",
         "    Considérant Signal = Trend x Seasonnal x Bruit\n",
         "    1/ Calcul d'un ratio de trend en comparant des fenetres de 6 mois d'une année sur l'autre\n",
-        "    2/ Calcul d'une prédiction sur la fenetre de prediction (window) à partir des valeurs de l'année précédente ajustée du trend\n",
-        "    3/ Calcul d'une prédiciton baseline à partir des valeurs de l'année précédente non ajustée du trend\n",
+        "    2/ Calcul d'une prédiction sur la fenetre de prediction (window) à partir des valeurs de l'année précédente ajustée du trend (Modele)\n",
+        "    3/ Calcul d'une prédiciton baseline à partir des valeurs de l'année précédente non ajustée du trend (Baseline)\n",
         "    Retourne :\n",
         "    - valeur_pred = valeur active en dehors de la fenetre de prediction, prediction sur la fenetre de prediction\n",
         "    - valeur_pred_baseline = idem\n",
@@ -1842,6 +1849,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "Précision proche de 100%"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "## Comparaison Baseline"
       ]
     },
@@ -1933,7 +1947,23 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "Précision d'environ 50% :\n",
+        "- Les compteurs sans tendances ou avec des tendances baissières présentent effectivement des profils de fuite : ID_106, ID_123, ID_285, ID_385\n",
+        "- Les autres compteurs ayant des tendances haussières, la détection confond une fuite avec la tendance de consommation."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "## étude complémentaire trend"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Afin d'établir un trend plus proche de la réalité, une régression sur la série x(t) - x(t-365) serait à étudier. Ceci n'est qu'une première observation."
       ]
     },
     {
