ajustement justif metrics

--- a/presentation.ipynb
+++ b/presentation.ipynb
@@ -1584,18 +1584,28 @@
         "- Modèle : $R(t)=C(t)-C(t-365)*T0$ où T0 est une correction de tendance\n",
         "\n",
         "Ce résiduel va être Qualifié (hausse, stabilité, baisse) et Quantifié (faible, moyen, fort) à l’aide de deux metrics :\n",
-        "- trend_score : $\\frac{R_{pos}²-R_{neg}²}{R²}$\n",
+        "- trend_score : $\\frac{\\sum{R_{pos}²}-\\sum{R_{neg}²}}{\\sum{R²}}$\n",
         "- level score : $\\frac{|Moy(R)|}{Moy(C)}$ la moyenne de C étant calculée sur les 365 jours qui précèdent la période d'évaluation.\n",
         "\n",
         "### Justifications\n",
         "Dans l'hypothèse $C(t)=T(t)*S(t)*B(t)$ avec C la consommation, T la tendance, S la saisonnalité annuelle et B le bruit, on a $S(t-365)=S(t)$\n",
         "\n",
-        "En définissant T0 le ratio de tendance par $T0=\\frac{T(t)}{T(t-365)}$, on a $C(t)-C(t-365)*T0=T(t)*S(t)*(B(t)-B(t-365))$\n",
+        "En définissant T0 le ratio de tendance par $T0=\\frac{T(t)}{T(t-365)}$, on a $C(t)-C(t-365)*T0=T(t)*S(t)*(B(t)-B(t-365))$ avec B(t) et B(t-365) des bruits gaussiens donc non corrélés, de moyenne 1, de distribution symétrique.\n",
         "\n",
-        "Si $C(t)=T(t)*S(t)*B(t) + F(t)$ où F est une fuite, alors $trendscore=1$ et $levelscore=\\frac{Moy(F)}{Moy(C)}$ car B(t) et B(t-365) sont des bruits gaussiens donc non corrélés, de moyenne 1, de distribution symétrique donc :\n",
-        "- $(B(t)-B(t-365))²=0$\n",
-        "- $(B(t)-B(t-365))_{pos}²-(B(t)-B(t-365))_{neg}²=0$\n",
-        "- $Moy(B(t)-B(t-365))=0$"
+        "Ainsi $B(t)-B(t-365)$ est un bruit gaussien de moyenne 0 et de variance le double de la variance de B, donc :\n",
+        "- $\\sum{(C(t)-C(t-365)*T0)²}=2*Var(C)$\n",
+        "- $\\sum{(B(t)-B(t-365))_{pos}²}-\\sum{(B(t)-B(t-365))_{neg}²}=0$\n",
+        "- $Moy(B(t)-B(t-365))=0$\n",
+        "\n",
+        "\n",
+        "Si $C(t)=T(t)*S(t)*B(t) + A(t)$ où A est une anomalie, alors :\n",
+        "- trendscore=\n",
+        "    - 1 si A positif et A² >> Var(C) (=fuite)\n",
+        "    - 0 si A nulle\n",
+        "    - -1 si A négatif et A² >> Var(C) (=bouchon) \n",
+        "- $levelscore=\\frac{Moy(A)}{Moy(C)}$\n",
+        "\n",
+        "NB : en utilisant le carré pour le trendscore, le dénominateur reste non nul et évite ainsi une divergeance."
       ]
     },
     {
